fixing up dark mode

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,11 +5,11 @@
 
 @layer components {
     .btn-primary {
-        @apply block px-5 py-3.5 items-center text-base font-medium text-white dark:text-slate-900 rounded shadow bg-gradient-to-r from-slate-900 dark:from-white to-slate-900 dark:to-white hover:opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-400 dark:focus:ring-slate-600 focus:ring-offset-slate-900 dark:focus:ring-offset-white;
+        @apply block px-5 py-3.5 items-center whitespace-nowrap text-base font-medium text-white dark:text-slate-900 rounded shadow bg-gradient-to-r from-slate-900 dark:from-white to-slate-900 dark:to-white hover:opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-400 dark:focus:ring-slate-600 focus:ring-offset-slate-900 dark:focus:ring-offset-white;
     }
 
     .btn-secondary {
-        @apply inline-flex items-center px-4 py-2 border border-slate-300 dark:border-slate-600 shadow text-base font-medium rounded text-slate-700 dark:text-slate-200 ~bg-white dark:bg-slate-900 hover:bg-slate-50 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-400 dark:focus:ring-slate-600;
+        @apply inline-flex whitespace-nowrap items-center px-4 py-2 border border-slate-300 dark:border-slate-600 shadow text-base font-medium rounded text-slate-700 dark:text-slate-200 ~bg-white dark:bg-slate-900 hover:bg-slate-50 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-400 dark:focus:ring-slate-600;
     }
 
     .btn-tertiary {
@@ -98,6 +98,14 @@
 
     .\~bg-slate-100 {
         @apply bg-slate-100 dark:bg-slate-900;
+    }
+
+    .\~border-slate-900 {
+        @apply border-slate-900 dark:border-slate-100;
+    }
+
+    .\~border-slate-300 {
+        @apply border-slate-300 dark:border-slate-700;
     }
 }
 
